infrastructure/controllers/traefik/production/internal/gateway-class.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: traefik-internal
spec:
  controllerName: traefik.io/gateway-controller/internal
