infrastructure/controllers/traefik/production/internal/internal-gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: internal-gateway
  namespace: traefik
  labels:
    networking.athanor.local/role: gateway
    networking.athanor.local/zone: internal
spec:
  gatewayClassName: traefik-internal
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      allowedRoutes:
        namespaces:
          from: Selector
          selector:
            matchLabels:
    - name: websecure
      protocol: HTTPS
      port: 443
      allowedRoutes:
        namespaces:
          from: Selector
          selector:
            matchLabels:
              athanor.io/gateway-scope: "internal"

      tls:
        mode: Terminate
        certificateRefs:
          - name: athanor-wildcard-cert
